--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,7 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="title_activity_maps">Map</string>
+    <string name="title_activity_search">Search</string>
+    <string name="title_activity_categories">Categories</string>
+    <string name="title_activity_favourite">Favourites</string>
 </resources>
