--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,9 +13,6 @@
     <string name="title_activity_search">Search</string>
     <string name="title_activity_categories">Categories</string>
     <string name="title_activity_favourite">Favourites</string>
-    <string name="title_activity_restaurant">Retuarant</string>
-    <string name="one">Detatils</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_restaurant">Restaurant</string>
+    <string name="one">Details</string>
 </resources>
