--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,19 @@
     <string name="title_activity_favourite">Favourites</string>
     <string name="title_activity_restaurant">Restaurant</string>
     <string name="one">Details</string>
+    <string name="selected_place">Last Selected Place:</string>
+
+    <string name="place_details">
+    <![CDATA[
+        <b>%1$s</b>
+        <br/>
+        <i>Place Id: %2$s</i>
+        <br/>
+        Address: %3$s
+        <br/>
+        Phone: %4$s
+        <br/>
+        Website: %5$s
+    ]]>
+    </string>
 </resources>
