--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,15 @@
         Website: %5$s
     ]]>
     </string>
+    <string-array name="category_array">
+        <item>Restaurant</item>
+        <item>Bar</item>
+        <item>Pub</item>
+        <item>Indian</item>
+        <item>Drinks</item>
+        <item>Food</item>
+        <item>Cafe</item>
+        <item>Coffee</item>
+    </string-array>
+
 </resources>
